# rustapi

./: Cargo.toml  Dockerfile
database/: dev.db
prisma/: schema.prisma
src/: lib.rs  main.rs  prisma.rs
src/controllers/: authentication.rs
src/models/: error.rs  mod.rs  response.rs  state.rs
src/routers/: authentication.rs  mod.rs
