workspace = { members = ["prisma-cli"] }
[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"

#[workspace]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
dotenvy = "0.15.7"
serde = "1.0.197"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde_json = "1.0.1"
thiserror = "1.0.24"